--- a/WebUI/Views/Shared/Components/Banner/Default.cshtml
+++ b/WebUI/Views/Shared/Components/Banner/Default.cshtml
@@ -1,17 +1,29 @@
 @model Banner
 
-<section class="w3l-bottom py-5" style="background: url(@Model.BannerImage) no-repeat center;">
-    <div class="container py-md-4 py-3 text-center">
-        <div class="row my-lg-4 mt-4">
-            <div class="col-lg-9 col-md-10 ml-auto">
-                <div class="bottom-info ml-auto">
-                    <div class="header-section text-left">
-                        <h3 class="hny-title two">@Model.BannerTitle</h3>
-                        <p class="mt-3 pr-lg-5">@Model.BannerDescription</p>
-                        <a href="#" class="btn btn-style btn-secondary mt-5">Daha fazlası</a>
+@if (Model != null)
+
+{
+    <section class="w3l-bottom py-5" style="background: url(@Model.BannerImage) no-repeat center;">
+        <div class="container py-md-4 py-3 text-center">
+            <div class="row my-lg-4 mt-4">
+                <div class="col-lg-9 col-md-10 ml-auto">
+                    <div class="bottom-info ml-auto">
+                        <div class="header-section text-left">
+                            <h3 class="hny-title two">@Model.BannerTitle</h3>
+                            <p class="mt-3 pr-lg-5">@Model.BannerDescription</p>
+                            <a href="#" class="btn btn-style btn-secondary mt-5">Daha fazlası</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+}
+
+else
+
+{
+    <div class="container py-5">
+        <div class="alert alert-warning">Banner verisi bulunamadı.</div>
     </div>
-</section>
+}
