--- a/WebUI/Views/Destination/DestinationDetail.cshtml
+++ b/WebUI/Views/Destination/DestinationDetail.cshtml
@@ -120,7 +120,7 @@
                         {
                             <div class="media mt-4">
                                 <div class="img-circle">
-                                    <img src="/Template/images/c1.jpg" class="img-fluid" alt="...">
+                                    <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="img-fluid" alt="..." style="width:50px; height:50px; border-radius: 50%;">
                                 </div>
                                 <div class="media-body">
 
@@ -138,7 +138,8 @@
                 <!-- COMMENT FORM -->
                 <div class="leave-comment-form mt-5" id="reply">
                     <h4 class="side-title mb-2">Yeni bir yorum yazın</h4>
-                    <form method="post">
+                    <form method="post" asp-action="AddComment" asp-controller="Comment">
+                        <input type="hidden" name="DestinationId" value="@Model.DestinationId" />
                         <div class="form-group">
                             <textarea id="commentContent" name="CommentContent" class="form-control" placeholder="Yorum*" required=""
                                 spellcheck="false"></textarea>
@@ -152,7 +153,7 @@
                             </div>
                         </div>
                         <div class="submit text-right">
-                            <button id="commentButton" type="button" class="btn btn-style btn-primary">Gönder</button>
+                            <button id="commentButton" type="submit" class="btn btn-style btn-primary">Gönder</button>
                         </div>
                     </form>
                 </div>
