--- a/WebUI/Views/Shared/Components/Footer/Default.cshtml
+++ b/WebUI/Views/Shared/Components/Footer/Default.cshtml
@@ -1,4 +1,3 @@
-
 <footer>
     <section class="w3l-footer">
         <div class="w3l-footer-16-main py-5">
@@ -52,19 +51,19 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left text-center">
-                        <p>OĞUZHAN TURAN</p>
+                        <p>KADİR UZUN</p>
                     </div>
                     <div class="columns-2 mt-lg-0 mt-3">
                         <ul class="social">
-                            <li><a href="#"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                            <li><a href="#"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
                             </li>
-                            <li><a href="#"><span class="fa fa-linkedin" aria-hidden="true"></span></a>
+                            <li><a href="#"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
                             </li>
-                            <li><a href="#"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                            <li><a href="#"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                             </li>
-                            <li><a href="#"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
+                            <li><a href="#"><i class="fa-brands fa-google-plus" aria-hidden="true"></i></a>
                             </li>
-                            <li><a href="#"><span class="fa fa-github" aria-hidden="true"></span></a>
+                            <li><a href="#"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -91,13 +90,13 @@
                 }
             }
 
-                // When the user clicks on the button, scroll to the top of the document
+            // When the user clicks on the button, scroll to the top of the document
             function topFunction() {
                 document.body.scrollTop = 0;
                 document.documentElement.scrollTop = 0;
             }
         </script>
-    
+
         <script>
             $(function () {
                 $('.navbar-toggler').click(function () {
@@ -111,26 +110,26 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script>
-        $("#newNewsletter").click(function () {
-            let value = {
-                NewsletterMail: $("#NewsletterMail").val()
-            };
-            
-            $.ajax({
-                type: "post",
-                url: "/Contact/NewNewsletter/",
-                data: value,
-                success: function (func) {
-                    let result = jQuery.parseJSON(func);
-                    $("#NewsletterMail").val("");
-                    Swal.fire({
-                        position: "center",
-                        icon: "success",
-                        html: "Bülten kaydınız alındı.",
-                        showConfirmButton: false,
-                        timer: 1500
-                    });
-                }
-            });
+    $("#newNewsletter").click(function () {
+        let value = {
+            NewsletterMail: $("#NewsletterMail").val()
+        };
+
+        $.ajax({
+            type: "post",
+            url: "/Contact/NewNewsletter/",
+            data: value,
+            success: function (func) {
+                let result = jQuery.parseJSON(func);
+                $("#NewsletterMail").val("");
+                Swal.fire({
+                    position: "center",
+                    icon: "success",
+                    html: "Bülten kaydınız alındı.",
+                    showConfirmButton: false,
+                    timer: 1500
+                });
+            }
         });
+    });
 </script>
