--- a/WebUI/Views/Shared/Components/Header/Default.cshtml
+++ b/WebUI/Views/Shared/Components/Header/Default.cshtml
@@ -1,12 +1,10 @@
-
-
 <header id="site-header" class="fixed-top">
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
             <h1><a class="navbar-brand mr-lg-5" asp-controller="Home" asp-action="Index">Traversal</a></h1>
             <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
-            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-            aria-label="Toggle navigation">
+                data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                 <span class="navbar-toggler-icon fa icon-close fa-times"></span>
                 </span>
@@ -14,7 +12,8 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item @ViewBag.homeActive">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">Ana Sayfa <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" asp-controller="Home" asp-action="Index">Ana Sayfa <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item @ViewBag.aboutActive">
                         <a class="nav-link" asp-controller="About" asp-action="Index">Hakkımızda</a>
@@ -25,22 +24,29 @@
                     <li class="nav-item @ViewBag.contactActive">
                         <a class="nav-link" asp-controller="Contact" asp-action="Index">İletişim</a>
                     </li>
-                    @if(User.Identity.IsAuthenticated)
+                    @if (User.Identity.IsAuthenticated)
+
                     {
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="UserLogout">Çıkış Yap</a>
                         </li>
-                    } else
+                    }
+                    else
+
                     {
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="UserLogin">Giriş Yap</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="User" asp-action="UserRegister">Kayıt Ol</a>
                         </li>
                     }
                     <li class="nav-item">
                         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="Member" asp-controller="Profile" asp-action="ProfileIndex">Hesabım</a>
+                        <a class="nav-link" asp-area="Member" asp-controller="Profile"
+                            asp-action="ProfileIndex">Hesabım</a>
                     </li>
                 </ul>
             </div>
